[package]
description = "Parser for the Kerberos protocol"
license = "MIT/Apache-2.0"
keywords = ["Kerberos","parser","nom"]
homepage = "https://github.com/rusticata/kerberos-parser"
repository = "https://github.com/rusticata/kerberos-parser.git"
name = "kerberos-parser"
version = "0.2.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
categories = ["parsing"]

include = [
  "LICENSE-*",
  ".gitignore",
  ".travis.yml",
  "Cargo.toml",
  "assets/*.bin",
  "src/*.rs",
  "tests/*.rs"
]

[dependencies]
nom = "^3.0"
# rusticata-macros = "1.0"
# der-parser = "1.0"

[dependencies.der-parser]
# path = "../der-parser"
git = "https://github.com/copslock/der-parser.git"

[dependencies.rusticata-macros]
# path = "../rusticata-macros"
git = "https://github.com/copslock/rusticata-macros.git"

[badges]
travis-ci = { repository = "rusticata/kerberos-parser" }
